# django-pdf-actions

./: .coveragerc  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  MANIFEST.in  README.md  conftest.py  index.html  mkdocs.yml  module.py  objects.inv  pyproject.toml  pytest.ini  setup.cfg
.github/: GitVersion.yml
.github/workflows/: README.md  gitversion.yml  pages.yml  publish.yml  tests.yml
django_pdf_actions/: admin.py  apps.py  models.py  tests.py  views.py
django_pdf_actions/actions/: __init__.py  landscape.py  pdf_response.py  portrait.py  utils.py
django_pdf_actions/management/commands/: setup_fonts.py
django_pdf_actions/migrations/: 0001_initial.py  0002_add_page_size_field.py  0003_exportpdfsettings_rtl_support_and_more.py  0004_add_alignment_fields.py
docs/: custom-methods.md  examples.md  index.md  installation.md  quickstart.md  requirements.txt  settings.md  usage.md
installation/: index.html
quickstart/: index.html
requirements/: docs.txt
scripts/: check_version_bump.py
search/: search_index.json
settings/: index.html
static/django_pdf/fonts/: README.md
tests/: __init__.py  settings.py  test_actions.py  test_admin.py  test_compatibility.py  test_management_commands.py  test_models.py  test_utils.py  utils.py
