[metadata]
name = django-pdf-export
version = 0.1.0
description = Export Django model data to beautifully formatted PDF documents
long_description = file: README.md
long_description_content_type = text/markdown
author = Ibrahim Roshdy
author_email = your.email@example.com
url = https://github.com/ibrahimroshdy/django-pdf-export
project_urls =
    Documentation = https://django-pdf-export.readthedocs.io/
    Bug Tracker = https://github.com/ibrahimroshdy/django-pdf-export/issues
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8
install_requires =
    Django>=3.2
    reportlab>=3.6.8
    arabic-reshaper>=3.0.0
    python-bidi>=0.4.2
    django-model-utils>=4.3.1

[options.packages.find]
exclude =
    tests*
    docs*

[options.package_data]
django_pdf_actions =
    static/django_pdf_actions/fonts/*.ttf
    static/django_pdf_actions/images/*.png
    templates/django_pdf_actions/*.html