[metadata]
name = django-pdf-actions
version = 0.1.52
description = A Django app to export PDFs from admin actions
long_description = file: README.md
long_description_content_type = text/markdown
author = Ibrahim Roshdy
author_email = ibrahimrosh5@gmail.com
url = https://github.com/ibrahimroshdy/django-pdf-actions
project_urls =
    Documentation = https://ibrahimroshdy.github.io/django-pdf-actions/
    Bug Tracker = https://github.com/ibrahimroshdy/django-pdf-actions/issues
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Framework :: Django :: 5.0
    Framework :: Django :: 5.1
    Framework :: Django :: 5.2
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
python_requires = >=3.8,<4
install_requires =
    Django>=3.2
    reportlab>=4.0.4,<5
    arabic-reshaper>=3.0.0
    python-bidi>=0.4.0
    django-model-utils>=4.0.0
    requests>=2.28.0

[options.packages.find]
exclude =
    tests*
    docs*

[options.package_data]
django_pdf_actions =
    static/django_pdf_actions/fonts/*.ttf
    static/django_pdf_actions/images/*.png
    templates/django_pdf_actions/*.html
